style(about): fix strong visibility and shrink DPhil credential
- Set post-title font-weight to normal so <strong> on first name is visible
- Add .credential span style at 0.55em in grey for the DPhil suffix

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -14,10 +14,17 @@
 }
 .post-title {
     font-size: 42px;
+    font-weight: normal;
     letter-spacing: -1px;
     line-height: 1;
     margin-bottom: 10px;
     margin-top: 0;
+
+    .credential {
+        font-size: 0.55em;
+        letter-spacing: 0;
+        color: $grey-color;
+    }
     // @include media-query($on-laptop) {
     //     font-size: 36px;
     // }
